# arzMETA-arzMETA-GAME-SERVER-BOOST-MANY_ROOM

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  cmake_install.cmake
src/CoreLib/: CMakeLists.txt
src/CoreLib/boost/stage/lib/: libboost_atomic-vc143-mt-gd-x32-1_81.lib  libboost_atomic-vc143-mt-gd-x64-1_81.lib  libboost_atomic-vc143-mt-x32-1_81.lib  libboost_atomic-vc143-mt-x64-1_81.lib  libboost_chrono-vc143-mt-gd-x32-1_81.lib  libboost_chrono-vc143-mt-gd-x64-1_81.lib  libboost_chrono-vc143-mt-x32-1_81.lib  libboost_chrono-vc143-mt-x64-1_81.lib  libboost_container-vc143-mt-gd-x32-1_81.lib  libboost_container-vc143-mt-gd-x64-1_81.lib  libboost_container-vc143-mt-x32-1_81.lib  libboost_container-vc143-mt-x64-1_81.lib  libboost_context-vc143-mt-gd-x32-1_81.lib  libboost_context-vc143-mt-gd-x64-1_81.lib  libboost_context-vc143-mt-x32-1_81.lib  libboost_context-vc143-mt-x64-1_81.lib  libboost_contract-vc143-mt-gd-x32-1_81.lib  libboost_contract-vc143-mt-gd-x64-1_81.lib  libboost_contract-vc143-mt-x32-1_81.lib  libboost_contract-vc143-mt-x64-1_81.lib  libboost_coroutine-vc143-mt-gd-x32-1_81.lib  libboost_coroutine-vc143-mt-gd-x64-1_81.lib  libboost_coroutine-vc143-mt-x32-1_81.lib  libboost_coroutine-vc143-mt-x64-1_81.lib  libboost_date_time-vc143-mt-gd-x32-1_81.lib  libboost_date_time-vc143-mt-gd-x64-1_81.lib  libboost_date_time-vc143-mt-x32-1_81.lib  libboost_date_time-vc143-mt-x64-1_81.lib  libboost_exception-vc143-mt-gd-x32-1_81.lib  libboost_exception-vc143-mt-gd-x64-1_81.lib  libboost_exception-vc143-mt-x32-1_81.lib  libboost_exception-vc143-mt-x64-1_81.lib  libboost_fiber-vc143-mt-x32-1_81.lib  libboost_fiber-vc143-mt-x64-1_81.lib  libboost_filesystem-vc143-mt-x32-1_81.lib  (+77 more)
src/CoreLib/src/: Singleton.cpp  Singleton.h  pch.h
src/CoreLib/src/Job/: Job.h  JobQueue.cpp  JobQueue.h  JobTimer.cpp  JobTimer.h  LockQueue.cpp  LockQueue.h
src/CoreLib/src/Network/: Acceptor.cpp  Acceptor.h  RecvBuffer.cpp  RecvBuffer.h  SendBuffer.cpp  SendBuffer.h  Service.cpp  Service.h  Session.cpp  Session.h
src/CoreLib/src/Thread/: TLS.cpp  TLS.h  ThreadManager.cpp  ThreadManager.h
src/CoreLib/src/Util/: LogManager.cpp  LogManager.h
src/DummyClient/: CMakeLists.txt
src/DummyClient/src/: PacketManager.cpp  PacketManager.h  pch.cpp  pch.h
src/DummyClient/src/Client/: Client.cpp  Client.h
src/DummyClient/src/Main/: DummyClient.cpp
src/DummyClient/src/Protocol/: Packet_000_Common.pb.cc  Packet_000_Common.pb.h  Packet_001_Base.pb.cc  Packet_001_Base.pb.h  Packet_002_Interaction.pb.h  Packet_003_Myroom.pb.cc  Packet_003_Myroom.pb.h  Packet_004_Office.pb.cc  Packet_004_Office.pb.h  Packet_005_Matching.pb.cc  Packet_005_Matching.pb.h  Packet_006_OX.pb.cc
src/DummyClient/src/Session/: GameSession.cpp  GameSession.h
src/DummyClient/src/ws/: connection_listener.cpp  connection_listener.h
src/GameServer/: CMakeLists.txt  CMakeLists.txt.save  Makefile  cmake_install.cmake
src/GameServer/CSharp/: Packet000RoomCommon.cs  Packet001Base.cs  Packet001RoomOffice.cs  Packet002RoomMyroom.cs  Packet004Office.cs  Packet005Matching.cs  Packet005OX.cs  Packet006OX.cs  Packet101ModuleBase.cs  Packet102ModuleInteraction.cs  PacketManager.cs
src/GameServer/Dummy/: ServerPacketHandler.h
src/GameServer/Proto/: Packet_000_Common.proto  Packet_000_Room_Common.proto  Packet_001_Base.proto  Packet_001_Room_Office.proto  Packet_004_Office.proto  Packet_005_Matching.proto
src/GameServer/Templates/: ClientPacketHandler.h  PacketHandler.cpp  PacketManager.cs  RoomBase.h  RoomHandler.cpp  ServerPacketHandler.h
src/GameServer/src/: ClientPacketHandler.cpp  ClientPacketHandler.h
src/GameServer/src/GameContents/: ClientManager.h  GameContents.h  GameObject.h  RoomManager.cpp  RoomManager.h  RoomTypes.h  Scene.cpp  Scene.h
src/GameServer/src/HTTP/: HttpServer.cpp  HttpServer.h
src/GameServer/src/Main/: GameServer.cpp  roomInfo.txt
src/GameServer/src/Protocol/: Packet_000_Common.pb.h  Packet_000_Room_Common.pb.cc  Packet_000_Room_Common.pb.h  Packet_001_Base.pb.cc  Packet_001_Base.pb.h  Packet_001_Room_Office.pb.cc  Packet_001_Room_Office.pb.h  Packet_002_Interaction.pb.cc  Packet_002_Room_Myroom.pb.cc  Packet_002_Room_Myroom.pb.h  Packet_003_Myroom.pb.h  Packet_004_Office.pb.cc  Packet_004_Office.pb.h  Packet_005_Matching.pb.cc  Packet_005_Matching.pb.h  Packet_005_OX.pb.cc  Packet_005_OX.pb.h  Packet_101_Module_Base.pb.cc  Packet_101_Module_Base.pb.h  Packet_102_Module_Interaction.pb.cc  Packet_102_Module_Interaction.pb.h
src/GameServer/src/Room/: GameRoom.cpp  GameRoom.h  OfficeRoom.cpp  OfficeRoom.h  RoomBase.cpp  RoomBase.h  RoomHandler.cpp  RoomManager.cpp
src/GameServer/src/Session/: GameSession.cpp  GameSession.h
src/GameServer/src/Util/: Protocols.h  pch.cpp  pch.h
src/Server/: CMakeLists.txt
src/Server/src/: PacketManager.cpp  PacketManager.h  Protocols.h  pch.cpp  pch.h
src/Server/src/Contents/: ClientManager.cpp  ClientManager.h  GameContents.h  RoomManager.cpp  RoomManager.h  RoomTypes.cpp  RoomTypes.h
src/Server/src/HTTP/: HttpServer.cpp  HttpServer.h
src/Server/src/Main/: GameServer.cpp
src/Server/src/Protocol/: Packet_000_Common.pb.cc  Packet_000_Common.pb.h  Packet_001_Base.pb.cc  Packet_001_Base.pb.h  Packet_003_Myroom.pb.cc  Packet_003_Myroom.pb.h  Packet_004_Office.pb.cc  Packet_004_Office.pb.h  Packet_005_Matching.pb.cc  Packet_005_Matching.pb.h  Packet_006_OX.pb.cc  Packet_006_OX.pb.h
src/Server/src/Session/: GameSession.cpp  GameSession.h
src/ServerCore/: CMakeLists.txt  Makefile  cmake_install.cmake
src/ServerCore/src/Job/: GlobalQueue.cpp  GlobalQueue.h  Job.h  JobQueue.cpp  JobQueue.h  JobTimer.cpp  JobTimer.h  LockQueue.h
src/ServerCore/src/Main/: Singleton.cpp  Singleton.h  pch.h
src/ServerCore/src/Network/: Acceptor.cpp  Acceptor.h  RecvBuffer.cpp  RecvBuffer.h  SendBuffer.cpp  SendBuffer.h  Service.cpp  Service.h  Session.cpp  Session.h
src/ServerCore/src/Thread/: TLS.cpp  TLS.h  ThreadManager.cpp  ThreadManager.h
src/ServerCore/src/Util/: LogManager.cpp  LogManager.h
(+128 files in other folders)
